--- a/tmux.conf
+++ b/tmux.conf
@@ -4,10 +4,7 @@ bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 #scroll
-set -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # I want to be the last word on window names
 set-option -g allow-rename off
@@ -48,6 +45,7 @@ bind-key l select-pane -R
 
 # powerline
 source "/home/lotus/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+set-option -g default-terminal "screen-256color"
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
