--- a/tmux.conf
+++ b/tmux.conf
@@ -41,10 +41,9 @@ set -g @tpm_plugins " \
 # github_username/plugin_name    \
 # git@github.com/user/plugin     \
 # git@bitbucket.com/user/plugin  \
-bind-key l select-pane -R
 
 # powerline
-source "/home/lotus/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+source "$HOME/.local/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf"
 set-option -g default-terminal "screen-256color"
 
 # Initializes TMUX plugin manager.
